<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ResourceName">
    <string name="task_app_name">任务组件</string>

    <string name="name_start_time">开始时间：</string>
    <string name="name_end_time">结束时间：</string>
    <string name="name_operation_name">作业名称</string>
    <string name="name_task_name">任务名称</string>
    <string name="name_command_name">命令名称</string>
    <string name="name_cooperation_name">协作名称</string>
    <string name="name_order_group">受令班组：</string>
    <string name="name_cooperation_group">协作班组：</string>
    <string name="name_command_content">命令内容：</string>
    <string name="name_cooperation_content">协作内容：</string>
    <string name="name_execution_time">执行时间</string>
    <string name="name_location">位置</string>
    <string name="name_plan">计划</string>
    <string name="name_real">实际</string>
    <string name="name_publisher_uploaded_record">任务发布人上传附件：</string>
    <string name="name_performer_uploaded_record">任务执行人上传附件：</string>
    <string name="name_issue_order_group">发令班组：</string>
    <string name="name_issue_cooperation_group">发起班组：</string>
    <string name="name_train_number">车次</string>
    <string name="name_plan_time">计划时间</string>
    <string name="name_arrive_time">到位时间</string>
    <string name="name_finish_time">完成时间</string>
    <string name="name_device_name">设备名称：</string>
    <string name="name_time_limit">解决时限：</string>
    <string name="name_problem_desc">问题描述：</string>
    <string name="name_submit_time">提交时间：</string>
    <string name="name_bluetooth_address">蓝牙地址：</string>
    <string name="name_last_time_receive_signal">最近收到信号时间：</string>
    <string name="name_plan_start">计划开始</string>
    <string name="name_plan_finish">计划结束</string>
    <string name="name_note_content">备注内容：</string>

    <string name="btn_issue">发布</string>
    <string name="btn_wait_pass">待验收</string>
    <string name="btn_click_to_start">点击开始</string>
    <string name="btn_click_to_finish">点击完成</string>
    <string name="btn_restart">重新开始</string>
    <string name="btn_command">命令</string>
    <string name="btn_cooperation">协作</string>
    <string name="btn_take_photo"><![CDATA[拍照>>]]></string>
    <string name="btn_video"><![CDATA[录像>>]]></string>
    <string name="btn_record"><![CDATA[录音>>]]></string>
    <string name="btn_video1">视频</string>
    <string name="btn_broadcast">广播</string>
    <string name="btn_device_repair">设备报修</string>
    <string name="btn_submit">上报</string>
    <string name="btn_add_problem">添加问题</string>
    <string name="btn_pass">通过</string>
    <string name="btn_not_pass">未通过</string>
    <string name="btn_talkback">对讲</string>
    <string name="btn_message">消息</string>
    <string name="btn_call">呼叫</string>

    <string name="title_issue_command">发布命令</string>
    <string name="title_issue_cooperation">发布协作</string>
    <string name="title_select_team">选择班组</string>
    <string name="title_select_train">选择车次</string>
    <string name="title_btn_note">备注</string>
    <string name="title_operation_detail">作业详情</string>
    <string name="title_command_detail">命令详情</string>
    <string name="title_task_detail">任务详情</string>
    <string name="title_alarm_detail">预警详情</string>
    <string name="title_grid_detail">网格详情</string>
    <string name="title_cooperation_detail">协作详情</string>
    <string name="title_patrol_item">巡视项目</string>
    <string name="title_input_device_id">请输入设备ID</string>
    <string name="title_problem_list">问题列表</string>

    <string name="value_nothing">无</string>
    <string name="value_grid_task">网格任务</string>
    <string name="value_alarm_task">预警任务</string>
    <string name="value_late">(晚点)</string>
    <string name="value_late_unsure">(晚点未定)</string>
    <string name="value_stop_run">(停运)</string>
    <string name="value_check_in_progress">正在检票</string>
    <string name="value_check_finished">完成检票</string>
    <string name="value_check_stopped">停止检票</string>

    <string name="suffix_operation">个作业</string>
    <string name="suffix_command">个命令</string>
    <string name="suffix_cooperation">个协作</string>
    <string name="suffix_plan">个步骤</string>
    <string name="suffix_minute">分</string>
    <string name="suffix_track">道</string>
    <string name="suffix_platform">站台</string>
    <string name="suffix_waiting_room">候</string>
    <string name="suffix_check_port">口</string>

    <string name="toast_no_selected_item">当前没有已选项</string>
    <string name="toast_change_state_failed">更改状态失败</string>
    <string name="toast_issue_success">发布成功</string>
    <string name="toast_issue_failed">发布失败</string>
    <string name="toast_complete_info">请将信息填写完整</string>
    <string name="toast_wait_for_files_upload_complete">请等待附件上传完成</string>
    <string name="toast_upload_success">上传成功</string>
    <string name="toast_upload_failed">上传失败</string>
    <string name="toast_download_success">下载成功</string>
    <string name="toast_local_file_clear_failed">本地文件清空失败</string>
    <string name="toast_local_file_clear_success">本地文件清空成功</string>
    <string name="toast_start_time_cannot_be_later_than_finish_time">开始时间不能晚于结束时间</string>
    <string name="toast_finish_time_cannot_be_earlier_than_start_time">结束时间不能早于开始时间</string>
    <string name="toast_confirm_success">确认成功</string>
    <string name="toast_confirm_failed">确认失败</string>
    <string name="toast_get_patrol_data_first">需要先获取巡视项目</string>
    <string name="toast_submit_failed">上报失败</string>
    <string name="toast_scan_bluetooth_failed">开启检测蓝牙失败，建议重新打开</string>
    <string name="toast_bluetooth_not_support">该设备不支持蓝牙功能</string>
    <string name="toast_open_bluetooth_failed">打开蓝牙失败，巡视功能暂不可用</string>
    <string name="toast_add_device_first">请先添加设备</string>
    <string name="toast_no_subclass">没有可选子类</string>
    <string name="toast_get_subclass_failed">获取子类失败</string>
    <string name="toast_device_mismatch">设备不匹配</string>
    <string name="toast_check_device_failed">查询设备失败</string>

    <string name="dialog_sure_to_start">确定要开始吗？</string>
    <string name="dialog_sure_to_finish">确定要完成吗？</string>
    <string name="dialog_on_issue">发布中</string>
    <string name="dialog_after_exiting_data_will_be_cleared_are_you_sure">退出之后将清空所填数据，确定退出吗?</string>
    <string name="dialog_sure_no_problem">确定没有问题吗？</string>
    <string name="dialog_sure_exist_problem">确定存在问题吗？</string>
    <string name="dialog_add_problem_desc">添加问题描述</string>
    <string name="dialog_on_submit">上报中</string>
    <string name="dialog_on_search">查询中</string>
    <string name="dialog_sure_to_pass">确定通过吗？</string>
    <string name="dialog_sure_to_not_pass">确定未通过吗？</string>

    <string name="tab_my_task">我的任务</string>
    <string name="tab_task_monitor">任务监控</string>
    <string name="tab_command_and_cooperation">命令与协作</string>
    <string name="tab_patrol_plan">巡视计划</string>
    <string name="tab_problem_manager">问题管理</string>

    <string name="hint_select_station">请选择车站</string>

    <string name="default_check_state">默认状态</string>
    <string name="default_counter_150">0/150</string>
    <string name="default_patrol_date">----年--月--日巡检计划</string>

    <!-- 任务状态筛选 -->
    <string-array name="taskStatusArray">
        <item>@string/spinner_all</item>
        <item>@string/spinner_not_started</item>
        <item>@string/spinner_doing</item>
        <item>@string/spinner_finished</item>
    </string-array>
</resources>
