<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/basic_black1"
    android:orientation="horizontal"
    android:padding="@dimen/basic_d10">

    <Button
        android:id="@+id/btn_take_photo"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/basic_d48"
        android:layout_marginEnd="@dimen/basic_d5"
        android:layout_weight="1"
        android:background="@drawable/basic_btn_yellow"
        android:text="@string/btn_take_photo"
        android:textSize="@dimen/basic_s18" />

    <Button
        android:id="@+id/btn_video"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/basic_d48"
        android:layout_marginLeft="@dimen/basic_d5"
        android:layout_marginRight="@dimen/basic_d5"
        android:layout_weight="1"
        android:background="@drawable/basic_btn_yellow"
        android:text="@string/btn_video"
        android:textSize="@dimen/basic_s18" />

    <Button
        android:id="@+id/btn_record"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/basic_d48"
        android:layout_marginStart="@dimen/basic_d5"
        android:layout_weight="1"
        android:background="@drawable/basic_btn_yellow"
        android:text="@string/btn_record"
        android:textSize="@dimen/basic_s18" />
</LinearLayout>