<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.winsion.component.basic.view.TitleView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/title_btn_note" />

    <EditText
        android:id="@+id/et_note_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/basic_d300"
        android:layout_below="@id/tv_title"
        android:background="@color/basic_gray8"
        android:gravity="start|top"
        android:hint="@string/name_note_content"
        android:maxLength="150"
        android:paddingBottom="@dimen/basic_d40"
        android:paddingEnd="@dimen/basic_d10"
        android:paddingStart="@dimen/basic_d10"
        android:paddingTop="@dimen/basic_d10"
        android:textColor="@color/basic_white1"
        android:textColorHint="@color/basic_gray2"
        android:textSize="@dimen/basic_s20"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tv_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/et_note_content"
        android:layout_alignEnd="@id/et_note_content"
        android:layout_margin="@dimen/basic_d10"
        android:text="@string/default_counter_150"
        android:textColor="@color/basic_gray1"
        android:textSize="@dimen/basic_s16" />
</RelativeLayout>