<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.winsion.component.basic.view.TitleView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:confirmButtonText="@string/btn_device_repair"
        app:titleText="@string/title_patrol_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/basic_d40"
        android:background="@color/basic_gray10"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_arrive_time"
                android:textColor="@color/basic_gray2"
                android:textSize="@dimen/basic_s16" />

            <TextView
                android:id="@+id/tv_arrive_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/basic_d10"
                android:textColor="@color/basic_white1"
                android:textSize="@dimen/basic_s16"
                tools:text="--:--" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_finish_time"
                android:textColor="@color/basic_gray2"
                android:textSize="@dimen/basic_s16" />

            <TextView
                android:id="@+id/tv_finish_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/basic_d10"
                android:textColor="@color/basic_white1"
                android:textSize="@dimen/basic_s16"
                tools:text="--:--" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/basic_layout_status" />
</LinearLayout>