<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_train_module"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/basic_d35"
            android:layout_marginTop="@dimen/basic_d15"
            android:background="@drawable/task_btn_white_large_corner"
            android:gravity="center"
            android:paddingLeft="@dimen/basic_d26"
            android:paddingRight="@dimen/basic_d26"
            android:textColor="@color/basic_black6"
            android:textSize="@dimen/basic_s24"
            android:textStyle="bold"
            tools:text="D924" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/basic_d14"
            android:paddingLeft="@dimen/basic_d15"
            android:paddingRight="@dimen/basic_d15"
            android:paddingTop="@dimen/basic_d13">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_startStationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/basic_blue1"
                    android:textSize="@dimen/basic_s21"
                    tools:text="珠海" />

                <TextView
                    android:id="@+id/tv_train_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/basic_d12"
                    android:layout_marginTop="@dimen/basic_d12"
                    android:textColor="@color/basic_white1"
                    android:textSize="@dimen/basic_s16"
                    tools:text="正在检票" />

                <TextView
                    android:id="@+id/tv_endStationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/basic_blue1"
                    android:textSize="@dimen/basic_s21"
                    tools:text="北京西" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/basic_d14"
                    android:layout_marginTop="@dimen/basic_d16" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_track"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/basic_white1"
                        android:textSize="@dimen/basic_s21"
                        tools:text="3出站口" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suffix_track"
                        android:textColor="@color/basic_white1"
                        android:textSize="@dimen/basic_s16"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/basic_d23"
                    android:layout_height="@dimen/basic_d23"
                    android:src="@drawable/task_ic_arrive"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="@dimen/basic_d1"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="@dimen/basic_d23"
                    android:layout_height="@dimen/basic_d23"
                    android:layout_marginBottom="@dimen/basic_d33"
                    android:src="@drawable/task_ic_go"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_platform"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/basic_white1"
                        android:textSize="@dimen/basic_s21"
                        tools:text="3站台" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suffix_platform"
                        android:textColor="@color/basic_white1"
                        android:textSize="@dimen/basic_s16"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_plan_arrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/basic_white1"
                    android:textSize="@dimen/basic_s21"
                    tools:text="03:20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/basic_d12"
                    android:layout_marginTop="@dimen/basic_d12"
                    android:text="@string/name_plan"
                    android:textColor="@color/basic_gray2"
                    android:textSize="@dimen/basic_s16" />

                <TextView
                    android:id="@+id/tv_plan_depart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/basic_white1"
                    android:textSize="@dimen/basic_s21"
                    tools:text="03:38" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/basic_d14"
                    android:layout_marginTop="@dimen/basic_d16" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_wait_room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/basic_white1"
                        android:textSize="@dimen/basic_s21"
                        tools:text="候车区" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suffix_waiting_room"
                        android:textColor="@color/basic_white1"
                        android:textSize="@dimen/basic_s16"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_real_arrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/basic_blue1"
                    android:textSize="@dimen/basic_s21"
                    tools:text="03:20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/basic_d12"
                    android:layout_marginTop="@dimen/basic_d12"
                    android:text="@string/name_real"
                    android:textColor="@color/basic_gray2"
                    android:textSize="@dimen/basic_s16" />

                <TextView
                    android:id="@+id/tv_real_depart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/basic_blue1"
                    android:textSize="@dimen/basic_s21"
                    tools:text="03:38" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/basic_d14"
                    android:layout_marginTop="@dimen/basic_d16" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_check_port"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/basic_white1"
                        android:textSize="@dimen/basic_s21"
                        tools:text="B3,A3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suffix_check_port"
                        android:textColor="@color/basic_white1"
                        android:textSize="@dimen/basic_s16"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/basic_d1"
            android:layout_marginTop="@dimen/basic_d130"
            android:background="@color/basic_black1"
            tools:ignore="ContentDescription" />
    </FrameLayout>
</LinearLayout>